--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,11 +42,13 @@
     <string name="menu_slideshow">Slideshow</string>
     <string name="home" />
     <string name="Favourite" />
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="my_orders">My Orders</string>
     <string name="ahmadszubaidia_gmail_com">Ahmadszubaidia@gmail.com</string>
     <string name="Pizaa_menu" />
     <string name="Pizza_menu" />
+    <string name="title_activity_admin_home">AdminHomeActivity</string>
 
 </resources>
